@@ -14,5 +14,6 @@
   "deployedSystem": [
     {"@id": "http://fdri.ceh.ac.uk/id/environmental-monitoring-sensor/123456"}
   ],
-  "deployedSystemProcedure": [{"@id": "http://fdri.ceh.ac.uk/id/procedure/cosmos-sampling-regime-ta"}]
+  "deployedSystemProcedure": [{"@id": "http://fdri.ceh.ac.uk/id/procedure/cosmos-sampling-regime-ta"}],
+  "settleInPeriod": "PT24H"
 }
