@@ -15,5 +15,6 @@
         "agent": {"@id": "http://fdri.ceh.ac.uk/ref/common/manufacturer/vaisala"},
         "hasRole": {"@id": "http://fdri.ceh.ac.uk/ref/common/related-party-role/manufacturer"}
     }],
-    "hasProcedure": [{"@id": "http://fdri.ceh.ac.uk/id/procedure/cosmos-sampling-regime-ta.jsonld"}]
+    "hasProcedure": [{"@id": "http://fdri.ceh.ac.uk/id/procedure/cosmos-sampling-regime-ta.jsonld"}],
+    "settleInPeriod": "PT24H"
 }
